# test_intel_hybrid_architecture

./: CMakeLists.txt  README.md  baseline.cpp  run.sh
.run/: baseline (E core).run.xml  baseline (P core).run.xml  baseline.run.xml  baseline_native.run.xml
